--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-h1 {
-    background-image: url("../../Delani_studio/img/h_img.jpg");
-    }
+div{
+    background-image: url("../img/h_img.jpg");
+}
 h1 {text-align: center;}
 h6 {text-align: center;}
