--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 div{
     background-image: url("../img/h_img.jpg");
 }
-h1 {text-align: center;}
-h6 {text-align: center;}
+h1 {text-align: center; color: #f5f1f1;}
+h6 {text-align: center; color: #f8f5f5;}
+img.logo{text-align: center;}
