--- a/css/styles.css
+++ b/css/styles.css
@@ -3,4 +3,9 @@ div{
 }
 h1 {text-align: center; color: #f5f1f1;}
 h6 {text-align: center; color: #f8f5f5;}
-img.logo{text-align: center;}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 5%;
+  }
