--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ div{
 h1 {text-align: center; color: #f5f1f1;}
 h2 {text-align: center;}
 h6 {text-align: center; color: #f8f5f5;}
+
 img.logo {
     display: block;
     margin-left: auto;
@@ -16,3 +17,5 @@ img.mouse {
     margin-right: auto;
     width: 2%;
   }
+
+p.a {text-align-last: center;}
