--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 h1 {text-align: center; color: #f5f1f1;}
 h2 {text-align: center;}
 h6 {text-align: center; color: #f8f5f5;}
+#servi {text-align-last: center; color: #f5f1f1;}
 
 img.logo {
     display: block;
